--- a/rsvp.html
+++ b/rsvp.html
@@ -106,13 +106,13 @@
 
                     <fieldset class="field-group" id="contact_info_fieldset">
                         <label>Contact Info</label>
-                        <p>What is your email address and phone number in case we need to get in touch?</p>
+                        <p>What is your phone number and email address in case we need to get in touch?</p>
                         <label for="telephone">Phone Number</label>
                         <input type="tel" name="telephone" id="telephone" placeholder="(555) 555-5555"
                             class="form-control" required>
 
                         <label for="email-address">Email Address</label>
-                        <input type="email" name="_replyto" id="email_address" placeholder="beetlegeuse@gmail.com"
+                        <input type="email" name="_replyto" id="email_address" placeholder="betelegeuse@gmail.com"
                             class="form-control" required>
                     </fieldset>
 
