Typo, more info, colors

--- a/info.html
+++ b/info.html
@@ -64,7 +64,11 @@
                     <ul>
                         <li>Friday, September 15th
                             <ul>
-                                <li>8:30pm, welcome drinks</li>
+				    <li>6:00pm, rehearsal dinner at <a href="https://goo.gl/maps/o79qCH9aFdkS1Agn8" target="blank">615 Buck Mountain Trail, Cookeville, TN, 38506</a></li>
+				    <ul>
+					    <li>Invite-only</li>
+				    </ul>
+				    <li>8:00pm, welcome drinks at <a href="https://goo.gl/maps/QHx1i9HFEjF9uC1d9" target="blank">Father Tom's Pub, 32 N Cedar Ave, Cookeville, TN 38501</a></li>
                                 <ul>
                                     <li>Open invite, pay your own</li>
                                 </ul>
@@ -79,6 +83,7 @@
                                 <li>5:00pm, ceremony</li>
                                 <li>5:30pm, cocktail hour</li>
                                 <li>6:30pm, dinner is served</li>
+				<li>9:00pm, end of official reception events. Party to follow for adults only.</li>
                             </ul>
                         </li>
 
@@ -154,7 +159,7 @@
 
                     <ul>
                         <li>Father Tom's</li>
-                        <li>Crawaddy's</li>
+                        <li>Crawdaddy's</li>
                         <li>House of Thai</li>
                         <li>The Putnam Room</li>
                     </ul>
